# advent-of-code

./: README.md
2015/day-1/: build.zig
2015/day-1/src/: main.zig
2023/: Cargo.toml  justfile
2023/daily-template/: Cargo.toml
2023/day-01/: Cargo.toml
2023/day-01/src/: part1.rs  part2.rs
2023/day-02/: Cargo.toml
2023/day-02/src/: part1.rs  part2.rs
2023/day-03/: Cargo.toml
2023/day-03/src/: part1.rs  part2.rs
2023/day-04/: Cargo.toml
2023/day-04/src/: part1.rs  part2.rs
2023/day-05/: Cargo.toml
2023/day-05/src/: part1.rs  part2.rs
